--- a/index.html
+++ b/index.html
@@ -16,11 +16,11 @@
 
     <nav class="db dt-l w-100 border-box pa3 ph5-l">
       <a class="db dtc-l v-mid mid-gray link dim w-100 w-25-l tc tl-l mb2 mb0-l" href="#" title="Home">
-      <h1 class="link dim black-70 f6 f5-l dib mr3 mr4-l" href="/index.html" title="Home">Josh Pitzalis</h1>
+      <h1 class="link dim black-70 f6 f5-l dib mr3 mr4-l" href="/joshpitzalis/index.html" title="Home">Josh Pitzalis</h1>
 
       </a>
     <div class="db dtc-l v-mid w-100 w-75-l tc tr-l">
-       <a class="f6 grow no-underline br-pill ba bw1 ph3 pv2 mb2 dib dark-gray" href="/hire.html">Hire Me</a>
+       <a class="f6 grow no-underline br-pill ba bw1 ph3 pv2 mb2 dib dark-gray" href="/joshpitzalis/hire.html">Hire Me</a>
     </div>
   </nav>
 
