--- a/index.html
+++ b/index.html
@@ -16,11 +16,11 @@
 
     <nav class="db dt-l w-100 border-box pa3 ph5-l">
       <a class="db dtc-l v-mid mid-gray link dim w-100 w-25-l tc tl-l mb2 mb0-l" href="#" title="Home">
-      <h1 class="link dim black-70 f6 f5-l dib mr3 mr4-l" href="/joshpitzalis/index.html" title="Home">Josh Pitzalis</h1>
+      <h1 class="link dim black-70 f6 f5-l dib mr3 mr4-l" href="/" title="Home">Josh Pitzalis</h1>
 
       </a>
     <div class="db dtc-l v-mid w-100 w-75-l tc tr-l">
-       <a class="f6 grow no-underline br-pill ba bw1 ph3 pv2 mb2 dib dark-gray" href="/joshpitzalis/hire.html">Hire Me</a>
+       <a class="f6 grow no-underline br-pill ba bw1 ph3 pv2 mb2 dib dark-gray" href="/hire.html">Hire Me</a>
     </div>
   </nav>
 
@@ -28,7 +28,7 @@
 
       <div class="cf pa2">
         <div class="fl w-50 w-25-m w-20-l pa2">
-          <a href="#" class="db link dim tc">
+          <a href="/saladbox.html" class="db link dim tc">
             <img src="img/saladbox.png" alt="Salad Box" class="w-100 db outline black-10"/>
             <dl class="mt2 f6 lh-copy">
               <dt class="clip">Title</dt>
@@ -144,11 +144,6 @@
     <footer class="ph3 ph4-ns pv6 bt b--black-10 black-70">
   <a href="mailto:" class="link b f3 f2-ns dim black-70 lh-solid">hello@joshpitzalis.com</a>
   <p class="f6 db b ttu lh-solid">© 2016</p>
-  <div class="mt5">
-    <a href="/language/" title="Language" class="f6 dib pr2 mid-gray dim">About</a>
-    <a href="/terms/"    title="Terms" class="f6 dib ph2 mid-gray dim">Now</a>
-    <a href="/privacy/"  title="Privacy" class="f6 dib pl2 mid-gray dim">Newsletter</a>
-  </div>
 </footer>
 
   </body>
