--- a/hire.html
+++ b/hire.html
@@ -15,7 +15,7 @@
   <body>
 
     <nav class="db dt-l w-100 border-box pa3 ph5-l">
-      <a class="db dtc-l v-mid mid-gray link dim w-100 w-25-l tc tl-l mb2 mb0-l" href="#" title="Home">
+      <a class="db dtc-l v-mid mid-gray link dim w-100 w-25-l tc tl-l mb2 mb0-l" href="/" title="Home">
       <h1 class="link dim black-70 f6 f5-l dib mr3 mr4-l" href="/" title="Home">Josh Pitzalis </h1>
       </a>
     <div class="db dtc-l v-mid w-100 w-75-l tc tr-l">
