project now links to project page

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 
       <div class="cf pa2">
         <div class="fl w-50 w-25-m w-20-l pa2">
-          <a href="/saladbox.html" class="db link dim tc">
+          <a href="/saladboxy.html" class="db link dim tc">
             <img src="img/saladbox.png" alt="Salad Box" class="w-100 db outline black-10"/>
             <dl class="mt2 f6 lh-copy">
               <dt class="clip">Title</dt>
