--- a/saladboxy.html
+++ b/saladboxy.html
@@ -20,7 +20,7 @@
 
       </a>
     <div class="db dtc-l v-mid w-100 w-75-l tc tr-l">
-       <a class="f6 grow no-underline br-pill ba bw1 ph3 pv2 mb2 dib dark-gray" href="/joshpitzalis/hire.html">Hire Me</a>
+       <a class="f6 grow no-underline br-pill ba bw1 ph3 pv2 mb2 dib dark-gray" href="/hire.html">Hire Me</a>
     </div>
   </nav>
 
