--- a/index.html
+++ b/index.html
@@ -9,141 +9,171 @@
     <meta name="author" content="">
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="https://unpkg.com/tachyons@4.3.1/css/tachyons.min.css"/>
+    <link rel="stylesheet" href="./style.css"/>
 
   </head>
   <body>
 
-    <nav class="db dt-l w-100 border-box pa3 ph5-l">
-      <a class="db dtc-l v-mid mid-gray link dim w-100 w-25-l tc tl-l mb2 mb0-l" href="/" title="Home">
-      <h1 class="link dim black-70 f6 f5-l dib mr3 mr4-l" href="/" title="Home">Josh Pitzalis</h1>
+    <nav class="db dt-l w-100 border-box pt3 pa3">
+      <a class="db dtc-l v-mid mid-gray link w-100 w-25-l tc tl-l mb2 mb0-l" href="/" title="Home">
+      <h1 class="link black-70 f2 dib mr4-l pl4-l" href="/" title="Home">Josh Pitzalis</h1>
       </a>
-    <div class="db dtc-l v-mid w-100 w-75-l tc tr-l">
-       <a class="f6 grow no-underline br-pill ba bw1 ph3 pv2 mb2 dib dark-gray" href="/hire.html">Hire Me</a>
+    <div class="db dtc-l v-mid w-100 w-75-l tc tr-l pa4">
+         <a class="f6 grow no-underline br-pill ph3 pv2 mb2 dib white bg-dark-gray" href="http://www.upwork.com/o/profiles/users/_~0113ec27778c707372/">Hire Me</a>
+
     </div>
   </nav>
 
-    <article>
+  <article class="cf pa3 mw9 center">
+  <header class="fl w-100 w-50-l pa3-m pa4-l mb3 mb5-l">
+    <h2 class="lh-title f3 b mt0">
+      Web Designer
+    </h2>
+  </header>
+  <section class="fl w-100 pb3">
+    <div class="fl w-100 w-50-m w-25-l pa3-m pa4-l">
+      <p class="f6 lh-copy measure">
+        "Super easy to work with."
+      </p>
+      <p>
+        <em>- Kristin Braddock, Founder of Sewing New Futures</em>
+      </p>
+    </div>
+    <div class="fl w-100 w-50-m w-25-l pa3-m pa4-l">
+      <p class="f6 lh-copy measure">
+        "Josh was a delight to work with; always cooperative, creative, responsive and technically excellent at his job - went above and beyond."
+      </p>
+      <p>
+        <em>- Bec Evans and Chris Smith, Founders of Prolifiko</em>
+      </p>
+    </div>
+    <div class="fl w-100 w-50-m w-25-l pa3-m pa4-l">
+      <p class="f6 lh-copy measure">
+        "Working with Josh was a great experience. His sense of design, aesthetics and flow of information was amazing. I am very pleased with his work and recommend him very highly."
+      </p>
+      <p>
+        <em>- Raju Arora, Founder of Kahanibaaz</em>
+      </p>
+    </div>
+    <div class="fl w-100 w-50-m w-25-l pa3-m pa4-l">
+      <p class="f6 lh-copy measure">
+        Joshua was extremely detail oriented and thorough in this project. I would highly recommend him to anyone wanting a quality developer.
+      </p>
+      <p>
+        <em>- Eric Schuster, Founder of Fresh Look Web Design</em>
+      </p>
+    </div>
+  </section>
 
-      <div class="cf pa2">
-        <div class="fl w-50 w-25-m w-20-l pa2">
-          <a href="/saladbox.html" class="db link dim tc">
-            <img src="img/saladbox.png" alt="Salad Box" class="w-100 db outline black-10"/>
-            <dl class="mt2 f6 lh-copy">
-              <dt class="clip">Title</dt>
-              <dd class="ml0 black truncate w-100">Salad Box</dd>
-              <dt class="clip">Artist</dt>
-              <dd class="ml0 gray truncate w-100">Product and Website Design</dd>
-            </dl>
-          </a>
-        </div>
+  <section class="cf w-100 pa3-ns" >
 
-        <div class="fl w-50 w-25-m w-20-l pa2">
-          <a href="#" class="db link dim tc">
-            <img src="img/shanu.png" alt="Young Thug - Jeffery" class="w-100 db outline black-10"/>
-            <dl class="mt2 f6 lh-copy">
-              <dt class="clip">Title</dt>
-              <dd class="ml0 black truncate w-100 ttu">Coffee Table Bookmaker</dd>
-              <dt class="clip">Artist</dt>
-              <dd class="ml0 gray truncate w-100">Website Design</dd>
-            </dl>
-          </a>
-        </div>
-        <div class="fl w-50 w-25-m w-20-l pa2">
-          <a href="#" class="db link dim tc">
-            <img src="img/google.png" alt="Kendrick Lamar untitled unmastered. Album Cover" class="w-100 db outline black-10"/>
-            <dl class="mt2 f6 lh-copy">
-              <dt class="clip">Title</dt>
-              <dd class="ml0 black truncate w-100">Google</dd>
-              <dt class="clip">Artist</dt>
-              <dd class="ml0 gray truncate w-100">Campaign Design</dd>
-            </dl>
-          </a>
-        </div>
-        <div class="fl w-50 w-25-m w-20-l pa2">
-          <a href="#" class="db link dim tc">
-            <img src="img/wpa.png" alt="Kaytranada 99%" class="w-100 db outline black-10"/>
-            <dl class="mt2 f6 lh-copy">
-              <dt class="clip">Title</dt>
-              <dd class="ml0 black truncate w-100">When Pandas Attack</dd>
-              <dt class="clip">Artist</dt>
-              <dd class="ml0 gray truncate w-100">Logo, website and Campaign Design</dd>
-            </dl>
-          </a>
-        </div>
-        <div class="fl w-50 w-25-m w-20-l pa2">
-          <a href="#" class="db link dim tc">
-            <img src="img/barsoom.png" alt="Baauer Aa - Album Cover" class="w-100 db outline black-10"/>
-            <dl class="mt2 f6 lh-copy">
-              <dt class="clip">Title</dt>
-              <dd class="ml0 black truncate w-100">Barsoom</dd>
-              <dt class="clip">Artist</dt>
-              <dd class="ml0 gray truncate w-100">Website and Campaign Design</dd>
-            </dl>
-          </a>
-        </div>
-        <div class="fl w-50 w-25-m w-20-l pa2">
-          <a href="#" class="db link dim tc">
-            <img src="img/prolifiko.png" alt="Santigold 99 cents - Album cover" class="w-100 db outline black-10"/>
-            <dl class="mt2 f6 lh-copy">
-              <dt class="clip">Title</dt>
-              <dd class="ml0 black truncate w-100">Prolifiko</dd>
-              <dt class="clip">Artist</dt>
-              <dd class="ml0 gray truncate w-100">Web Application</dd>
-            </dl>
-          </a>
-        </div>
-        <div class="fl w-50 w-25-m w-20-l pa2">
-          <a href="#" class="db link dim tc">
-            <img src="img/africa.png" alt="A Moon Shaped Pool - Album cover" class="w-100 db outline black-10"/>
-            <dl class="mt2 f6 lh-copy">
-              <dt class="clip">Title</dt>
-              <dd class="ml0 black truncate w-100">YPF Africa</dd>
-              <dt class="clip">Artist</dt>
-              <dd class="ml0 gray truncate w-100">Website Design</dd>
-            </dl>
-          </a>
-        </div>
-        <div class="fl w-50 w-25-m w-20-l pa2">
-          <a href="#" class="db link dim tc">
-            <img src="img/news.png" alt="The Life of Pablo - Album Cover" class="w-100 db outline black-10"/>
-            <dl class="mt2 f6 lh-copy">
-              <dt class="clip">Title</dt>
-              <dd class="ml0 black truncate w-100">Reporter Portfolios</dd>
-              <dt class="clip">Artist</dt>
-              <dd class="ml0 gray truncate w-100">Website Design</dd>
-            </dl>
-          </a>
-        </div>
-        <div class="fl w-50 w-25-m w-20-l pa2">
-          <a href="#" class="db link dim tc">
-            <img src="img/music.png" alt="Coloring Book - Album cover" class="w-100 db outline black-10"/>
-            <dl class="mt2 f6 lh-copy">
-              <dt class="clip">Title</dt>
-              <dd class="ml0 black truncate w-100">Music Basti</dd>
-              <dt class="clip">Artist</dt>
-              <dd class="ml0 gray truncate w-100">Website Design</dd>
-            </dl>
-          </a>
-        </div>
-        <div class="fl w-50 w-25-m w-20-l pa2">
-          <a href="#" class="db link dim tc">
-            <img src="img/bee.png" alt="Everybody Looking - Album Cover" class="w-100 db outline black-10"/>
-            <dl class="mt2 f6 lh-copy">
-              <dt class="clip">Title</dt>
-              <dd class="ml0 black truncate w-100">Beeminder</dd>
-              <dt class="clip">Artist</dt>
-              <dd class="ml0 gray truncate w-100">Product Redesign</dd>
-            </dl>
-          </a>
-        </div>
-      </div>
-    </article>
+  <article class="fl w-100 w-50-m  w-25-ns pa2-ns">
+    <a href="http://taniarashid.com/" class="ph2 ph0-ns pb3 link db dim">
+    <div class="aspect-ratio aspect-ratio--1x1">
+      <img style="background-image:url(img/tania.png);"
+      class="db bg-center cover aspect-ratio--object" />
+    </div>
+      <h3 class="f5 f4-ns mb0 black-90">Tania Rashid</h3>
+      <h3 class="f6 f5 fw4 mt2 black-60">Portfolio Design</h3>
+    </a>
+  </article>
+  <article class="fl w-100 w-50-m  w-25-ns pa2-ns">
+      <a href="http://jazzminjiwa.com/" class="ph2 ph0-ns pb3 link db dim">
+    <div class="aspect-ratio aspect-ratio--1x1">
+      <img style="background-image:url(img/jazzmin.png);"
+      class="db bg-center cover aspect-ratio--object"/>
+    </div>
+      <h3 class="f5 f4-ns mb0 black-90">Jazzmin Jiwa</h3>
+      <h3 class="f6 f5 fw4 mt2 black-60">Portfolio Design</h3>
+    </a>
+  </article>
+  <article class="fl w-100 w-50-m  w-25-ns pa2-ns">
+    <a href="http://www.ypfafrica.com/" class="ph2 ph0-ns pb3 link db dim">
+    <div class="aspect-ratio aspect-ratio--1x1">
+      <img style="background-image:url(img/ypf.png);"
+      class="db bg-center cover aspect-ratio--object" />
+    </div>
+      <h3 class="f5 f4-ns mb0 black-90">YPF Africa</h3>
+      <h3 class="f6 f5 fw4 mt2 black-60">Landing Page Design</h3>
+    </a>
+  </article>
+  <article class="fl w-100 w-50-m  w-25-ns pa2-ns">
+    <a href="http://joshpitzalis.github.io/sleptapp/" class="ph2 ph0-ns pb3 link db dim">
+    <div class="aspect-ratio aspect-ratio--1x1">
+      <img style="background-image:url(img/slept.png);"
+      class="db bg-center cover aspect-ratio--object" />
+    </div>
+      <h3 class="f5 f4-ns mb0 black-90">Slept</h3>
+      <h3 class="f6 f5 fw4 mt2 black-60">iPhone Application</h3>
+    </a>
+  </article>
+
+  <article class="fl w-100 w-50-m  w-25-ns pa2-ns">
+    <a href="http://shivangini.com/" class="ph2 ph0-ns pb3 link db dim">
+    <div class="aspect-ratio aspect-ratio--1x1">
+      <img style="background-image:url(img/shanu.png);"
+      class="db bg-center cover aspect-ratio--object" />
+    </div>
+      <h3 class="f5 f4-ns mb0 black-90">Family History Bookmaker</h3>
+      <h3 class="f6 f5 fw4 mt2 black-60">Portfolio Design</h3>
+    </a>
+  </article>
+  <article class="fl w-100 w-50-m  w-25-ns pa2-ns">
+    <a href="http://www.musicbasti.org/" class="ph2 ph0-ns pb3 link db dim">
+    <div class="aspect-ratio aspect-ratio--1x1">
+      <img style="background-image:url(img/music.png);"
+      class="db bg-center cover aspect-ratio--object" />
+    </div>
+      <h3 class="f5 f4-ns mb0 black-90">Music Basti</h3>
+      <h3 class="f6 f5 fw4 mt2 black-60">Website Redesign</h3>
+    </a>
+  </article>
+  <article class="fl w-100 w-50-m  w-25-ns pa2-ns">
+    <a href="http://www.kahanibaaz.com/" class="ph2 ph0-ns pb3 link db dim">
+    <div class="aspect-ratio aspect-ratio--1x1">
+      <img style="background-image:url(img/kautilya.png);"
+      class="db bg-center cover aspect-ratio--object" />
+    </div>
+      <h3 class="f5 f4-ns mb0 black-90">Kahanibaaz</h3>
+      <h3 class="f6 f5 fw4 mt2 black-60">Website Design</h3>
+    </a>
+  </article>
+  <article class="fl w-100 w-50-m  w-25-ns pa2-ns">
+    <a href="https://joshpitzalis.github.io/saladbox/" onclick="revealText()" class="ph2 ph0-ns pb3 link db dim">
+    <div class="aspect-ratio aspect-ratio--1x1">
+      <img style="background-image:url(img/saladbox.png);"
+      class="db bg-center cover aspect-ratio--object" />
+    </div>
+      <h3 class="f5 f4-ns mb0 black-90">Salad Box</h3>
+      <h3 class="f6 f5 fw4 mt2 black-60">Product and Website Design</h3>
+    </a>
+  </article>
+
+</section>
+
 
     <footer class="ph3 ph4-ns pv6 bt b--black-10 black-70">
-  <a href="mailto:" class="link b f3 f2-ns dim black-70 lh-solid">hello@joshpitzalis.com</a>
-  <p class="f6 db b ttu lh-solid">© 2016</p>
+      <div class='pb4'>
+        <a href="mailto:" class="link b f3 f2-ns dim black-70 lh-solid">hello@joshpitzalis.com</a>
+        <p class="f6 db b ttu lh-solid">© 2016</p>
+      </div>
+
+  <a class="link dim gray dib h2 w2 br-100 mr3 pa2 bg-near-white ba b--black-10" href="#" title="">
+    <svg data-icon="twitter" viewBox="0 0 32 32" style="fill:currentcolor">
+      <title>twitter icon</title>
+      <path d="M2 4 C6 8 10 12 15 11 A6 6 0 0 1 22 4 A6 6 0 0 1 26 6 A8 8 0 0 0 31 4 A8 8 0 0 1 28 8 A8 8 0 0 0 32 7 A8 8 0 0 1 28 11 A18 18 0 0 1 10 30 A18 18 0 0 1 0 27 A12 12 0 0 0 8 24 A8 8 0 0 1 3 20 A8 8 0 0 0 6 19.5 A8 8 0 0 1 0 12 A8 8 0 0 0 3 13 A8 8 0 0 1 2 4"></path>
+    </svg>
+  </a>
+  <a class="link dim gray dib br-100 h2 w2 mr3 pa2 bg-near-white ba b--black-10" href="#" title="">
+    <svg data-icon="github" viewBox="0 0 32 32" style="fill:currentcolor">
+      <title>github icon</title>
+      <path d="M0 18 C0 12 3 10 3 9 C2.5 7 2.5 4 3 3 C6 3 9 5 10 6 C12 5 14 5 16 5 C18 5 20 5 22 6 C23 5 26 3 29 3 C29.5 4 29.5 7 29 9 C29 10 32 12 32 18 C32 25 30 30 16 30 C2 30 0 25 0 18 M3 20 C3 24 4 28 16 28 C28 28 29 24 29 20 C29 16 28 14 16 14 C4 14 3 16 3 20 M8 21 A1.5 2.5 0 0 0 13 21 A1.5 2.5 0 0 0 8 21 M24 21 A1.5 2.5 0 0 0 19 21 A1.5 2.5 0 0 0 24 21 z"></path>
+    </svg>
+  </a>
+
 </footer>
+
+
 
   </body>
 </html>
