--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   <body>
 
     <nav class="db dt-l w-100 border-box pt3 pa3">
-      <a class="db dtc-l v-mid mid-gray link w-100 w-25-l tc tl-l mb2 mb0-l" href="/" title="Home">
+      <a class="db dtc-l v-mid mid-gray link w-100 w-25-l tc tl-l mb2 mb0-l" href=".//index.html#contact" title="Home">
       <h1 class="link black-70 f2 dib mr4-l pl4-l" href="/" title="Home">Josh Pitzalis</h1>
       </a>
     <div class="db dtc-l v-mid w-100 w-75-l tc tr-l pa4">
@@ -152,7 +152,7 @@
 </section>
 
 
-    <footer class="ph3 ph4-ns pv6 bt b--black-10 black-70">
+    <footer class="ph3 ph4-ns pv6 bt b--black-10 black-70" id='contact'>
       <div class='pb4'>
         <a href="mailto:" class="link b f3 f2-ns dim black-70 lh-solid">hello@joshpitzalis.com</a>
         <p class="f6 db b ttu lh-solid">© 2016</p>
