added barsoom post

--- a/index.html
+++ b/index.html
@@ -15,52 +15,52 @@
   <body>
 
     <nav class="db dt-l w-100 border-box pt3 pa3">
-      <a class="db dtc-l v-mid mid-gray link w-100 w-25-l tc tl-l mb2 mb0-l" href="./index.html#contact" title="Home">
-      <h1 class="link black-70 f2 dib mr4-l pl4-l" href="/" title="Home">Josh Pitzalis</h1>
+      <a class="db dtc-l v-mid mid-gray link w-100 w-50-l tc tl-l mb2 mb0-l" href="./index.html#contact" title="Home">
+      <h1 class="link black-70 f-5 dib mr4-l pl4-l
+      " href="/" title="Home">Josh Pitzalis</h1>
       </a>
-    <div class="db dtc-l v-mid w-100 w-75-l tc tr-l pa4">
-         <a class="f6 grow no-underline br-pill ph3 pv2 mb2 dib white bg-dark-gray" href="http://www.upwork.com/o/profiles/users/_~0113ec27778c707372/">Hire Me</a>
 
-    </div>
   </nav>
 
   <article class="cf pa3 mw9 center">
   <header class="fl w-100 w-50-l pa3-m pa4-l mb3 mb5-l">
-    <h2 class="lh-title f3 b mt0">
+    <!-- <h2 class="lh-title f3 b mt0">
       Web Designer
-    </h2>
+    </h2> -->
   </header>
   <section class="fl w-100 pb3">
     <div class="fl w-100 w-50-m w-25-l pa3-m pa4-l">
-      <p class="f6 lh-copy measure">
+      <p class="f4 lh-copy measure">
         "Super easy to work with."
       </p>
       <p>
-        <em>- Kristin Braddock, Founder of Sewing New Futures</em>
+        <em>- Kristin Braddock,
+        <br/>Founder of Sewing New Futures</em>
       </p>
     </div>
     <div class="fl w-100 w-50-m w-25-l pa3-m pa4-l">
-      <p class="f6 lh-copy measure">
+      <p class="f4 lh-copy measure">
         "Josh was a delight to work with; always cooperative, creative, responsive and technically excellent at his job - went above and beyond."
       </p>
       <p>
-        <em>- Bec Evans and Chris Smith, Founders of Prolifiko</em>
+        <em>- Bec Evans and Chris Smith, <br/>
+          Founders of Prolifiko</em>
       </p>
     </div>
     <div class="fl w-100 w-50-m w-25-l pa3-m pa4-l">
-      <p class="f6 lh-copy measure">
+      <p class="f4 lh-copy measure">
         "Working with Josh was a great experience. His sense of design, aesthetics and flow of information was amazing. I am very pleased with his work and recommend him very highly."
       </p>
       <p>
-        <em>- Raju Arora, Founder of Kahanibaaz</em>
+        <em>- Raju Arora, <br/>Founder of Kahanibaaz</em>
       </p>
     </div>
     <div class="fl w-100 w-50-m w-25-l pa3-m pa4-l">
-      <p class="f6 lh-copy measure">
-        Joshua was extremely detail oriented and thorough in this project. I would highly recommend him to anyone wanting a quality developer.
+      <p class="f4 lh-copy measure">
+        "Joshua was extremely detail oriented and thorough in this project. I would highly recommend him to anyone wanting a quality developer."
       </p>
       <p>
-        <em>- Eric Schuster, Founder of Fresh Look Web Design</em>
+        <em>- Eric Schuster, <br/>Founder of Fresh Look Web Design</em>
       </p>
     </div>
   </section>
@@ -140,17 +140,17 @@
     </a>
   </article>
   <article class="fl w-100 w-50-m  w-25-ns pa2-ns">
-    <a href="http://www.musicbasti.org/" class="ph2 ph0-ns pb3 link db dim">
+    <a href="./barsoom.html" class="ph2 ph0-ns pb3 link db dim">
     <div class="aspect-ratio aspect-ratio--1x1">
-      <img style="background-image:url(img/music.png);"
+      <img style="background-image:url(img/barsoom.png);"
       class="db bg-center cover aspect-ratio--object" />
     </div>
-      <h3 class="f5 f4-ns mb0 black-90">Music Basti</h3>
-      <h3 class="f6 f5 fw4 mt2 black-60">Website Redesign</h3>
+      <h3 class="f5 f4-ns mb0 black-90">Barsoom</h3>
+      <h3 class="f6 f5 fw4 mt2 black-60">Website and Campaign Design</h3>
     </a>
   </article>
 </section>
-
+</article>
 
     <footer class="ph3 ph4-ns pv6 bt b--black-10 black-70" id='contact'>
       <div class='pb4'>
@@ -164,12 +164,7 @@
       <path d="M2 4 C6 8 10 12 15 11 A6 6 0 0 1 22 4 A6 6 0 0 1 26 6 A8 8 0 0 0 31 4 A8 8 0 0 1 28 8 A8 8 0 0 0 32 7 A8 8 0 0 1 28 11 A18 18 0 0 1 10 30 A18 18 0 0 1 0 27 A12 12 0 0 0 8 24 A8 8 0 0 1 3 20 A8 8 0 0 0 6 19.5 A8 8 0 0 1 0 12 A8 8 0 0 0 3 13 A8 8 0 0 1 2 4"></path>
     </svg>
   </a>
-  <a class="link dim gray dib br-100 h2 w2 mr3 pa2 bg-near-white ba b--black-10" href="https://github.com/joshpitzalis" title="">
-    <svg data-icon="github" viewBox="0 0 32 32" style="fill:currentcolor">
-      <title>github icon</title>
-      <path d="M0 18 C0 12 3 10 3 9 C2.5 7 2.5 4 3 3 C6 3 9 5 10 6 C12 5 14 5 16 5 C18 5 20 5 22 6 C23 5 26 3 29 3 C29.5 4 29.5 7 29 9 C29 10 32 12 32 18 C32 25 30 30 16 30 C2 30 0 25 0 18 M3 20 C3 24 4 28 16 28 C28 28 29 24 29 20 C29 16 28 14 16 14 C4 14 3 16 3 20 M8 21 A1.5 2.5 0 0 0 13 21 A1.5 2.5 0 0 0 8 21 M24 21 A1.5 2.5 0 0 0 19 21 A1.5 2.5 0 0 0 24 21 z"></path>
-    </svg>
-  </a>
+
 
 </footer>
 
