--- a/barsoom.html
+++ b/barsoom.html
@@ -68,7 +68,7 @@ Barsoom - Marketing with a Small Budget
 </div>
 <article class="pa3 pa4-ns">
   <p class="f4 measure lh-copy">
-      This was the first restaurant website I ever worked on. I learnt that all you need is great picture of your food, a readable menu and a map with a number to call for reservations. Those are the only things people look for on a restaurant's website.
+      This was the first restaurant website I ever worked on. I learnt that all you need is a menu and a map with a number to call for reservations. Those are the only things people look for on a restaurant's website.
   </p>
 
   <p class="f4 measure lh-copy">
