--- a/barsoom.html
+++ b/barsoom.html
@@ -14,7 +14,7 @@ Barsoom - Marketing with a Small Budget
 
     </head>
 
-    <body>
+    <body class='gentium'>
 
 
           <header class="vh-75 bg-barsoom dt w-100">
@@ -387,36 +387,45 @@ A lot of the ideas for this campaign came from an approach to marketing called '
 </ul>
 
 </article>
+<footer class="ph3 ph4-ns pv6 bt b--black-10 black-70" id='contact'>
+  <div class='pb4'>
+    <a href="mailto:" class="link b f3 f2-ns dim black-70 lh-solid">hello@joshpitzalis.com</a>
+    <p class="f6 db b ttu lh-solid">© 2016</p>
+  </div>
+
+  <a class="twitter-follow-button"
+href="https://twitter.com/joshpitzalis"
+data-size="large">
+Follow @joshpitzalis</a>
+
+</footer>
 
 
+<script>
+(function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+(i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+})(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
 
-        <footer class="ph3 ph4-ns pv6 bt b--black-10 black-70" id='contact'>
-            <div class='pb4'>
-                <a href="mailto:hello@joshpitzalis.com" class="link b f3 f2-ns dim black-70 lh-solid">hello@joshpitzalis.com</a>
-                <p class="f6 db b ttu lh-solid">© 2016</p>
-            </div>
+ga('create', 'UA-86031259-1', 'auto');
+ga('send', 'pageview');
 
-            <a class="link dim gray dib h2 w2 br-100 mr3 pa2 bg-near-white ba b--black-10" href="https://twitter.com/joshpitzalis" title="">
-                <svg data-icon="twitter" viewBox="0 0 32 32" style="fill:currentcolor">
-      <title>twitter icon</title>
-      <path d="M2 4 C6 8 10 12 15 11 A6 6 0 0 1 22 4 A6 6 0 0 1 26 6 A8 8 0 0 0 31 4 A8 8 0 0 1 28 8 A8 8 0 0 0 32 7 A8 8 0 0 1 28 11 A18 18 0 0 1 10 30 A18 18 0 0 1 0 27 A12 12 0 0 0 8 24 A8 8 0 0 1 3 20 A8 8 0 0 0 6 19.5 A8 8 0 0 1 0 12 A8 8 0 0 0 3 13 A8 8 0 0 1 2 4"></path>
-    </svg>
-            </a>
+</script>
+<script>window.twttr = (function(d, s, id) {
+var js, fjs = d.getElementsByTagName(s)[0],
+t = window.twttr || {};
+if (d.getElementById(id)) return t;
+js = d.createElement(s);
+js.id = id;
+js.src = "https://platform.twitter.com/widgets.js";
+fjs.parentNode.insertBefore(js, fjs);
 
+t._e = [];
+t.ready = function(f) {
+t._e.push(f);
+};
 
-        </footer>
-
-
-        <script>
-          (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-          (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-          m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-          })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
-
-          ga('create', 'UA-86031259-1', 'auto');
-          ga('send', 'pageview');
-
-        </script>
-    </body>
-
+return t;
+}(document, "script", "twitter-wjs"));</script>
+</body>
 </html>
