--- a/index.html
+++ b/index.html
@@ -13,62 +13,66 @@
     <link href="https://fonts.googleapis.com/css?family=Gentium+Book+Basic" rel="stylesheet">
 
   </head>
-  <body class='gentium'>
+  <body class='gentium black-70 lh-copy'>
 
-    <nav class="db dt-l w-100 border-box pt3 pa3">
-      <a class="db dtc-l v-mid mid-gray link w-100 w-50-l tc tl-l mb2 mb0-l" href="./index.html#contact" title="Home">
-      <h1 class="link black-70 f-5 dib mr4-l pl4-l
-      " href="/" title="Home">Josh Pitzalis</h1>
-      </a>
+    <nav class="db dt-l w-100 border-box pa4 ph5-l">
+      <div class="db dtc-l v-mid w-100 w-75-l tc tr-l">
+        <a class="dim dib ttu f6 grow no-underline br-pill ph3 pv2 mb2 dib white bg-cucumber" href="http://joshpitzalis.com/proposal">Order a Proposal</a>
+      </div>
+    </nav>
 
-  </nav>
+  <!-- <nav class="db dt-l w-100 border-box mb5 pa3">
+    <a class="db dtc-l v-mid mid-gray link w-100 w-50-l tc tl-l mb2 mb0-l" href="#" title="Home">
+    <h1 class="link black-70 f-5 dib mr4-l pl4-l
+    " href="/" title="Home"></h1>
+    </a>
+  </nav> -->
+
+  <div class='pa3 mt4 mw9 center'>
+  <h1 class="f2 b pa3-m pa4-l">Websites for Micro Businesses.</h1>
+  <img src='./img/wiggle.svg' class='mv3 pa3-m pa4-l'/>
+  </div>
 
   <article class="cf pa3 mw9 center">
-  <header class="fl w-100 w-50-l pa3-m pa4-l mb3 mb5-l">
-    <!-- <h2 class="lh-title f3 b mt0">
-      Web Designer
-    </h2> -->
-  </header>
+
+    <!-- <header class="fl w-100 w-50-l pa3-m pa4-l mb3 mb5-l">
+    <h2 class="lh-title f3 b mt0">
+      Simple, Fast, responsive Web development for Small Businesses.
+    </h2>
+  </header> -->
+
   <section class="fl w-100 pb3">
-    <div class="fl w-100 w-50-m w-25-l pa3-m pa4-l">
+    <div class="fl w-100 w-33-m w-33-l pa3-m pa4-l">
       <p class="f4 lh-copy measure">
         "Super easy to work with."
       </p>
       <p>
-        <em>- <a href='https://twitter.com/kbradd'>Kristin Braddock</a>,
-        <br/>Founder of Sewing New Futures</em>
+        <em>- Kristin Braddock,
+        <br/>Founder of <a href='http://sewingnewfutures.com/'>Sewing New Futures</a></em>
       </p>
     </div>
-    <div class="fl w-100 w-50-m w-25-l pa3-m pa4-l">
+    <div class="fl w-100 w-33-m w-33-l pa3-m pa4-l">
       <p class="f4 lh-copy measure">
         "Josh was a delight to work with; always cooperative, creative, responsive and technically excellent at his job - went above and beyond."
       </p>
       <p>
-        <em>- <a href='https://twitter.com/eva_bec'>Bec Evans</a> and <a href='https://twitter.com/word_smiths'>Chris Smith</a>, <br/>
-          Founders of Prolifiko</em>
+        <em>- Bec Evans and Chris Smith, <br/>
+          Founders of <a href='http://prolifiko.com/'>Prolifiko</a></em>
       </p>
     </div>
-    <div class="fl w-100 w-50-m w-25-l pa3-m pa4-l">
+    <div class="fl w-100 w-33-m w-33-l pa3-m pa4-l">
       <p class="f4 lh-copy measure">
         "Working with Josh was a great experience. His sense of design, aesthetics and flow of information was amazing. I am very pleased with his work and recommend him very highly."
       </p>
       <p>
-        <em>- <a href='https://twitter.com/rajuaroraxo'>Raju Arora</a>, <br/>Founder of Kahanibaaz</em>
-      </p>
-    </div>
-    <div class="fl w-100 w-50-m w-25-l pa3-m pa4-l">
-      <p class="f4 lh-copy measure">
-        "Joshua was extremely detail oriented and thorough in this project. I would highly recommend him to anyone wanting a quality developer."
-      </p>
-      <p>
-        <em>- <a href='https://twitter.com/freshlookweb'>Eric Schuster</a>, <br/>Founder of Fresh Look Web Design</em>
+        <em>- Raju Arora, <br/>Founder of <a href='http://www.kahanibaaz.com/'>Kahanibaaz</a></em>
       </p>
     </div>
   </section>
 
   <section class="cf w-100 pa3-ns" >
 
-    <article class="fl w-100 w-50-m  w-25-ns pa2-ns">
+    <article class="fl w-100 w-33-m w-33-l pa2-ns">
       <a href="http://www.kahanibaaz.com/" class="ph2 ph0-ns pb3 link db dim">
       <div class="aspect-ratio aspect-ratio--1x1">
         <img style="background-image:url(img/kautilya.png);"
@@ -78,59 +82,7 @@
         <h3 class="f6 f5 fw4 mt2 black-60">Website Design</h3>
       </a>
     </article>
-    <article class="fl w-100 w-50-m  w-25-ns pa2-ns">
-      <a href="https://joshpitzalis.github.io/saladbox/" onclick="revealText()" class="ph2 ph0-ns pb3 link db dim">
-      <div class="aspect-ratio aspect-ratio--1x1">
-        <img style="background-image:url(img/saladbox.png);"
-        class="db bg-center cover aspect-ratio--object" />
-      </div>
-        <h3 class="f5 f4-ns mb0 black-90">Salad Box</h3>
-        <h3 class="f6 f5 fw4 mt2 black-60">Product and Website Design</h3>
-      </a>
-    </article>
-
-  <article class="fl w-100 w-50-m  w-25-ns pa2-ns">
-      <a href="http://jazzminjiwa.com/" class="ph2 ph0-ns pb3 link db dim">
-    <div class="aspect-ratio aspect-ratio--1x1">
-      <img style="background-image:url(img/jazzmin.png);"
-      class="db bg-center cover aspect-ratio--object"/>
-    </div>
-      <h3 class="f5 f4-ns mb0 black-90">Jazzmin Jiwa</h3>
-      <h3 class="f6 f5 fw4 mt2 black-60">Portfolio Design</h3>
-    </a>
-  </article>
-  <article class="fl w-100 w-50-m  w-25-ns pa2-ns">
-    <a href="http://joshpitzalis.github.io/sleptapp/" class="ph2 ph0-ns pb3 link db dim">
-    <div class="aspect-ratio aspect-ratio--1x1">
-      <img style="background-image:url(img/slept.png);"
-      class="db bg-center cover aspect-ratio--object" />
-    </div>
-      <h3 class="f5 f4-ns mb0 black-90">Slept</h3>
-      <h3 class="f6 f5 fw4 mt2 black-60">iPhone Application</h3>
-    </a>
-  </article>
-
-  <article class="fl w-100 w-50-m  w-25-ns pa2-ns">
-    <a href="http://shivangini.com/" class="ph2 ph0-ns pb3 link db dim">
-    <div class="aspect-ratio aspect-ratio--1x1">
-      <img style="background-image:url(img/shanu.png);"
-      class="db bg-center cover aspect-ratio--object" />
-    </div>
-      <h3 class="f5 f4-ns mb0 black-90">Family History Bookmaker</h3>
-      <h3 class="f6 f5 fw4 mt2 black-60">Portfolio Design</h3>
-    </a>
-  </article>
-  <article class="fl w-100 w-50-m  w-25-ns pa2-ns">
-    <a href="http://taniarashid.com/" class="ph2 ph0-ns pb3 link db dim">
-    <div class="aspect-ratio aspect-ratio--1x1">
-      <img style="background-image:url(img/tania.png);"
-      class="db bg-center cover aspect-ratio--object" />
-    </div>
-      <h3 class="f5 f4-ns mb0 black-90">Tania Rashid</h3>
-      <h3 class="f6 f5 fw4 mt2 black-60">Portfolio Design</h3>
-    </a>
-  </article>
-  <article class="fl w-100 w-50-m  w-25-ns pa2-ns">
+  <article class="fl w-100 w-33-m w-33-l pa2-ns">
     <a href="http://www.ypfafrica.com/" class="ph2 ph0-ns pb3 link db dim">
     <div class="aspect-ratio aspect-ratio--1x1">
       <img style="background-image:url(img/ypf.png);"
@@ -140,7 +92,7 @@
       <h3 class="f6 f5 fw4 mt2 black-60">Landing Page Design</h3>
     </a>
   </article>
-  <article class="fl w-100 w-50-m  w-25-ns pa2-ns">
+  <article class="fl w-100 w-33-m w-33-l pa2-ns">
     <a href="./barsoom.html" class="ph2 ph0-ns pb3 link db dim">
     <div class="aspect-ratio aspect-ratio--1x1">
       <img style="background-image:url(img/barsoom.png);"
@@ -152,18 +104,22 @@
   </article>
 </section>
 </article>
+<!-- <div class='tc'>
+  <a class="f6 link dim br-pill ph3 pv2 mb2 dib white bg-cucumber ttu" href="#0">See More Work</a>
+</div> -->
 
-    <footer class="ph3 ph4-ns pv6 bt b--black-10 black-70" id='contact'>
-      <div class='pb4'>
-        <a href="mailto:" class="link b f3 f2-ns dim black-70 lh-solid">hello@joshpitzalis.com</a>
-        <p class="f6 db b ttu lh-solid">© 2016</p>
-      </div>
+<!-- Change the width and height values to suit you best -->
+<div class="typeform-widget" data-url="https://josh407.typeform.com/to/hxjToF" data-text="Calculator" style="width:100%;height:500px;"></div>
+<script>(function(){var qs,js,q,s,d=document,gi=d.getElementById,ce=d.createElement,gt=d.getElementsByTagName,id='typef_orm',b='https://s3-eu-west-1.amazonaws.com/share.typeform.com/';if(!gi.call(d,id)){js=ce.call(d,'script');js.id=id;js.src=b+'widget.js';q=gt.call(d,'script')[0];q.parentNode.insertBefore(js,q)}})()</script>
 
-      <a class="twitter-follow-button"
-  href="https://twitter.com/joshpitzalis"
-  data-size="large">
-Follow @joshpitzalis</a>
 
+<footer class=" mt6 pv5 ph3 ph5-m ph6-l mid-gray bt b--black-10 ">
+  <small class="f6 db tc">© 2017 <b class="ttu">Josh Pitzalis</b>, All Rights Reserved</small>
+  <!-- <div class="tc mt3">
+    <a href="/terms/"    title="Terms" class="f6 dib ph2 link mid-gray dim">Terms of Use</a>
+    <a href="/privacy/"  title="Privacy" class="f6 dib ph2 link mid-gray dim">Privacy</a>
+  </div> -->
+  <img src='./img/diamond.svg' class='mv4 center db'/>
 </footer>
 
 
@@ -177,21 +133,5 @@ Follow @joshpitzalis</a>
   ga('send', 'pageview');
 
 </script>
-<script>window.twttr = (function(d, s, id) {
-  var js, fjs = d.getElementsByTagName(s)[0],
-    t = window.twttr || {};
-  if (d.getElementById(id)) return t;
-  js = d.createElement(s);
-  js.id = id;
-  js.src = "https://platform.twitter.com/widgets.js";
-  fjs.parentNode.insertBefore(js, fjs);
-
-  t._e = [];
-  t.ready = function(f) {
-    t._e.push(f);
-  };
-
-  return t;
-}(document, "script", "twitter-wjs"));</script>
   </body>
 </html>
