changed hyperlink on index page

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
     <nav class="db dt-l w-100 border-box pa4 ph5-l">
       <div class="db dtc-l v-mid w-100 w-75-l tc tr-l">
-        <a class="dim dib ttu f6 grow no-underline br-pill ph3 pv2 mb2 dib white bg-cucumber" href="http://joshpitzalis.com/proposal">Order a Proposal</a>
+        <a class="dim dib ttu f6 grow no-underline br-pill ph3 pv2 mb2 dib white bg-cucumber" href="http://joshpitzalis.com/design">Order a Design Proposal</a>
       </div>
     </nav>
 
