added new logos

--- a/barsoom.html
+++ b/barsoom.html
@@ -5,7 +5,7 @@
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=Edge">
         <title>
-Barsoom - Marketing with a Small Budget
+Barsoom - A Case Study
         </title>
         <meta name="author" content="Josh Pitzalis">
         <meta name="description" content="Word of mouth is ultimately the most effective and most desirable form of marketing for any business.One way to sidestep the growing resistance to marketing is by finding ways to get people to talk to each other about your business.In our hyper-connected social world, most people now hear about interesting ideas from each other.">
