--- a/index.html
+++ b/index.html
@@ -70,36 +70,28 @@
     </div>
   </section>
 
-  <section class="cf w-100 pa3-ns" >
+  <section class="cf w-100 pa3-ns bb b--black-10 " >
 
     <article class="fl w-100 w-33-m w-33-l pa2-ns">
-      <a href="http://www.kahanibaaz.com/" class="ph2 ph0-ns pb3 link db dim">
-      <div class="aspect-ratio aspect-ratio--1x1">
-        <img style="background-image:url(img/kautilya.png);"
-        class="db bg-center cover aspect-ratio--object" />
-      </div>
-        <h3 class="f5 f4-ns mb0 black-90">Kahanibaaz</h3>
-        <h3 class="f6 f5 fw4 mt2 black-60">Website Design</h3>
+      <a href="http://www.kahanibaaz.com/" class="ph2 ph0-ns pb3 link db dim tc">
+        <img src="./img/kahanibaaz.svg" />
+        <h3 class="f5 f4-ns mb0 black-90 tc">Kahanibaaz</h3>
+        <h3 class="f6 f5 fw4 mt2 black-60 tc">Website Design</h3>
       </a>
     </article>
   <article class="fl w-100 w-33-m w-33-l pa2-ns">
-    <a href="http://www.ypfafrica.com/" class="ph2 ph0-ns pb3 link db dim">
-    <div class="aspect-ratio aspect-ratio--1x1">
-      <img style="background-image:url(img/ypf.png);"
-      class="db bg-center cover aspect-ratio--object" />
-    </div>
-      <h3 class="f5 f4-ns mb0 black-90">YPF Africa</h3>
-      <h3 class="f6 f5 fw4 mt2 black-60">Landing Page Design</h3>
+    <a href="http://www.ypfafrica.com/" class="ph2 ph0-ns pb3 link db dim tc">
+      <img src="./img/ypf.svg" />
+      <h3 class="f5 f4-ns mb0 black-90 tc">YPF Africa</h3>
+      <h3 class="f6 f5 fw4 mt2 black-60 tc">Landing Page Design</h3>
     </a>
   </article>
   <article class="fl w-100 w-33-m w-33-l pa2-ns">
-    <a href="./barsoom.html" class="ph2 ph0-ns pb3 link db dim">
-    <div class="aspect-ratio aspect-ratio--1x1">
-      <img style="background-image:url(img/barsoom.png);"
-      class="db bg-center cover aspect-ratio--object" />
-    </div>
-      <h3 class="f5 f4-ns mb0 black-90">Barsoom</h3>
-      <h3 class="f6 f5 fw4 mt2 black-60">Website and Campaign Design</h3>
+    <a href="./barsoom.html" class="ph2 ph0-ns pb3 link db dim tc">
+      <img src="./img/barsoom.svg"/>
+
+      <h3 class="f5 f4-ns mb0 black-90 tc">Barsoom</h3>
+      <h3 class="f6 f5 fw4 mt2 black-60 tc">Website and Campaign Design</h3>
     </a>
   </article>
 </section>
