--- a/barsoom.html
+++ b/barsoom.html
@@ -21,7 +21,7 @@ Barsoom - A Case Study
     <div
       style="background:url('./img/barsoom/barsoom.jpg') no-repeat center right;background-size: cover;"
       class="dtc v-mid cover ph3 ph4-m ph5-l">
-      <h1 class="f2 f-subheadline-l measure lh-title fw9 white">Marketing with a Small Budget</h1>
+      <h1 class="f2 f-subheadline-l measure lh-title fw9 white">Barsoom - A Case Study</h1>
       <p class="gray f6 mb4 ttu tracked white">By <a href="./index.html" title="Author" class='white'>Josh Pitzalis</a></p>
 
     </div>
