--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
     </div>
   </section>
 
-  <section class="cf w-100 pa3-ns bb b--black-10 " >
+  <section class="cf w-100 pa3-ns " >
 
     <article class="fl w-100 w-33-m w-33-l pa2-ns">
       <a href="http://www.kahanibaaz.com/" class="ph2 ph0-ns pb3 link db dim tc">
@@ -96,9 +96,9 @@
   </article>
 </section>
 </article>
-<!-- <div class='tc'>
-  <a class="f6 link dim br-pill ph3 pv2 mb2 dib white bg-cucumber ttu" href="#0">See More Work</a>
-</div> -->
+<div class='tc'>
+  <a class="f6 link dim br-pill ph3 pv2 mv5 dib white bg-cucumber ttu" href="http://joshpitzalis.com/now">See More Work</a>
+</div>
 
 <!-- Change the width and height values to suit you best -->
 <div class="typeform-widget" data-url="https://josh407.typeform.com/to/hxjToF" data-text="Calculator" style="width:100%;height:500px;"></div>
