updated project count on now page

--- a/now.html
+++ b/now.html
@@ -44,15 +44,15 @@
         <div class="cf">
           <dl class="fl fn-l w-50 dib-l w-auto-l lh-title mr5-l">
             <dd class="f6 fw4 ml0">Total Projects on the Web.</dd>
-            <dd class="f3 fw6 ml0">36</dd>
+            <dd class="f3 fw6 ml0">21</dd>
           </dl>
           <dl class="fl fn-l w-50 dib-l w-auto-l lh-title mr5-l">
-            <dd class="f6 fw4 ml0">Frontend</dd>
-            <dd class="f3 fw6 ml0">35</dd>
+            <dd class="f6 fw4 ml0">Front-end</dd>
+            <dd class="f3 fw6 ml0">20</dd>
           </dl>
           <dl class="fl fn-l w-50 dib-l w-auto-l lh-title mr5-l">
             <dd class="f6 fw4 ml0">Full Stack</dd>
-            <dd class="f3 fw6 ml0">2</dd>
+            <dd class="f3 fw6 ml0">1</dd>
           </dl>
 
         </div>
@@ -60,21 +60,6 @@
 
 
     <ul class="list pa0 ma0" >
-
-      <li class="w-100 bb b--black-10">
-        <a class="link dt w-100 bb b--black-10 pb2 mt2 dim" href="https://tamuro.org/">
-          <b class="db f3 mb1">Tamuro</b>
-          <p class="f5 db lh-copy measure black-70 b">
-            An anonymous chat application.
-          </p>
-          <p class="f5 db lh-copy measure black-70">I built the front end of the entire application in React. 22 pages in all. The project will be released once the backend is complete.
-          </p>
-          <dl class="mt2 f6">
-            <dt class="clip">Status</dt>
-            <dd class="ml0 black-70 ttu">Complete, Pending Release.</dd>
-          </dl>
-        </a>
-      </li>
 
       <li class="w-100 bb b--black-10">
         <a class="link dt w-100 bb b--black-10 pb2 mt2 dim" href="http://prolifiko.com/">
@@ -107,6 +92,21 @@ Prolifiko is a personal writing coach web application.</p>
           <dl class="mt2 f6">
             <dt class="clip">Status</dt>
             <dd class="ml0 black-70 ttu">Complete.</dd>
+          </dl>
+        </a>
+      </li>
+
+      <li class="w-100 bb b--black-10">
+        <a class="link dt w-100 bb b--black-10 pb2 mt2 dim" href="https://tamuro.org/">
+          <b class="db f3 mb1">Tamuro</b>
+          <p class="f5 db lh-copy measure black-70 b">
+            An anonymous chat application.
+          </p>
+          <p class="f5 db lh-copy measure black-70">I built the front end of the entire application in React. 22 pages in all. The project will be released once the backend is complete.
+          </p>
+          <dl class="mt2 f6">
+            <dt class="clip">Status</dt>
+            <dd class="ml0 black-70 ttu">Complete, Pending Release.</dd>
           </dl>
         </a>
       </li>
