--- a/now.html
+++ b/now.html
@@ -65,9 +65,9 @@
         <a class="link dt w-100 bb b--black-10 pb2 mt2 dim" href="http://prolifiko.com/">
           <b class="db f3 mb1">Prolifiko</b>
           <p class="f5 db lh-copy measure black-70 b">
-Prolifiko is a personal writing coach web application.</p>
+A personal writing coach app.</p>
           <p class="f5 db lh-copy measure black-70">
-            I built the MVP for this product with three other students after completing Founders & Coders, a coding bootcamp in London. This was thmye first professional fullstack software project ever.
+            I built the MVP for this product with three other students after completing Founders & Coders, a coding bootcamp in London. This was my first professional fullstack software project ever.
           </p>
           <p class="f5 db lh-copy measure black-70 i">
             "Josh was a delight to work with; always cooperative, creative, responsive and technically excellent at his job - went above and beyond."
@@ -84,7 +84,7 @@ Prolifiko is a personal writing coach web application.</p>
         <a class="link dt w-100 bb b--black-10 pb2 mt2 dim" href="http://blog.beeminder.com/josh/">
           <b class="db f3 mb1">Beeminder</b>
           <p class="f5 db lh-copy measure black-70 b">
-            An productivity app that charges you money if you don't get things done.
+            A productivity app that charges you money if you don't get things done.
           </p>
           <p class="f5 db lh-copy measure black-70">
             I worked on a redesign of the interface. Clicking here will take you to a case study of the redesign.
@@ -115,7 +115,7 @@ Prolifiko is a personal writing coach web application.</p>
         <a class="link dt w-100 bb b--black-10 pb2 mt2 dim" href="https://sewingnewfutures.com/">
           <b class="db f3 mb1">Sewing New Futures</b>
           <p class="f5 db lh-copy measure black-70 b">
-An online clothing store that employs and empowers women in forced prostitution</p>
+An online clothing store that employs and empowers women in forced prostitution.</p>
           <p class="f5 db lh-copy measure black-70">
             I designed and developed a custom theme for Shopify.
           </p>
