--- a/now.html
+++ b/now.html
@@ -24,16 +24,14 @@
   <article class="pa3 measure-wide center mt6">
     <h1 class="f2 b">Now I am...</h1>
 <ul>
-  <li>Available for <a href="http://joshpitzalis.com/design">new project work</a> from the 14th April 2017 onwards.</li>
-  <li>Working on the front-end of an Ether exhange for a client. Ethereum is like Bitcoin. If you are new to crypocurrencies, here is <a href="https://www.youtube.com/watch?v=W0qn3oPYo5c">a great primer.</a></li>
-<li>Learning Redux.</li>
-<li><a href="https://www.beeminder.com/joshpitzalis/run">Running regularly.</li>
-  <li><a href="https://www.beeminder.com/joshpitzalis/meditation">Meditating everday</a>.</li>
-  <li><a href="https://www.goodreads.com/review/list/37568632-joshua-pitzalis?shelf=%23ALL%23">Reading plenty</a>.</li>
-  <li>Staying regular with updates on my <a href="http://tinyletter.com/joshpitzalis">busines building adventures</a>.</li>
+  <li>Available for <a href="http://joshpitzalis.com/design">new project work</a> from the 10th May 2017 onwards.</li>
+  <li>Working on the front-end of an Ether exhange for a client. Ethereum is like Bitcoin. If you are new to crypocurrencies, here is <a href="https://www.youtube.com/watch?v=W0qn3oPYo5c">a great primer. This is an interesting project because its my first paid project using Redux.</a></li>
+  <li>Working on an audio chat application for the web. It's for a japanese client and the idea is anonymous audio chat rooms where people can set a topic for discussion. Here is <a href="https://jp.tamuro.org/">the landing page</a>. This is an interesting project because it's my first experience with real-time communication technologies on the web.</li>
+<li>My new years resolution to <a href="https://www.beeminder.com/joshpitzalis/run">run regularly</a> is going surprisingly well.</li>
+  <li>I'm also keeping regular updates on my <a href="http://tinyletter.com/joshpitzalis">business building adventures</a>.</li>
 </ul>
 
-<p>Last updated April 2nd, 2017.</p>
+<p>Last updated April 15th, 2017.</p>
 
     <img src='./img/wiggle.svg' class='mv5'/>
     <main class="mw6 center">
