--- a/now.html
+++ b/now.html
@@ -27,8 +27,8 @@
   <li>Available for <a href="http://joshpitzalis.com/design">new project work</a> from the 10th May 2017 onwards.</li>
   <li>Working on the front-end of an Ether exhange for a client. Ethereum is like Bitcoin. If you are new to crypocurrencies, here is <a href="https://www.youtube.com/watch?v=W0qn3oPYo5c">a great primer</a>. This is an interesting project because its my first paid project using Redux.</li>
   <li>Working on an <a href="https://jp.tamuro.org/">annonymous audio chat application for the web</a>. This is an interesting project because it's my first experience with real-time communication technologies on the web.</li>
-<li>sticking to my new year's resolution to <a href="https://www.beeminder.com/joshpitzalis/run">run regularly</a>.</li>
-  <li>keeping regular with updates on my <a href="http://tinyletter.com/joshpitzalis">business building adventures</a>.</li>
+  <li>Sticking to my new year's resolution to <a href="https://www.beeminder.com/joshpitzalis/run">run regularly</a>.</li>
+  <li>Keeping regular with updates on my <a href="http://tinyletter.com/joshpitzalis">business building adventures</a>.</li>
 </ul>
 
 <p>Last updated April 15th, 2017.</p>
