--- a/design.html
+++ b/design.html
@@ -33,7 +33,7 @@
   <p class="lh-copy f4">My proposals are not templates that I copy and paste, they are my best ideas for your specific problem.
   </p>
   <p class="lh-copy f4">
-      To illustrate the quality of thought that goes into a proposal, <a href='#' class="dim">this is an example of a proposal </a> I have sent out. A proposal takes between one week and 10 days to complete once ordered. the earliest I can start work on my next proposal is the <strong>16th of March 2017</strong>.
+      To illustrate the quality of thought that goes into a proposal, <a href='#' class="dim">this is an example of a proposal </a> I have sent out. A proposal takes between one week and 10 days to complete once ordered.
       </p>
   <p class="lh-copy f4">
 I charge $500 to put a proposal together. If you like my ideas and decide to work with me then the money gets deducted from the total cost of the project. If you decide not to continue, you have paid for the ideas. You are free to tweak them and have someone else bring them to life.</p>
